Issue 7507 - UI - cleanup style and alignments
Description:

Cleanup the layout on some on the settings pages, and the alignment. Some
fields used the entire width of the page for a very small value, and some
places the width of the fields needed indents.

Also NumberInput's minus buttons wouldn't behave correctly unless the value
was an integer (versus a string).

relates: https://github.com/389ds/389-ds-base/issues/7507

Reviewed by: spichugi(Thanks!)

--- a/src/cockpit/389-console/src/css/ds.css
+++ b/src/cockpit/389-console/src/css/ds.css
@@ -24,7 +24,7 @@
     filter: progid:dximagetransform.microsoft.gradient(startColorstr="#ff39a5dc", endColorstr="#ff0088ce", GradientType=0);
     border-color: #00659c;
     color: #fff;
-    padding: 3px;
+    padding: 1px;
     box-shadow: 0 3px 3px rgb(3 3 3 / 10%);
     border-radius: 50%;
     border: 1px solid transparent;
